--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,27 @@
 .env.*.php
 .env.php
 .env
+
+\.idea/
+
+vendor/
+
+artisan
+
+composer\.json
+
+server\.php
+
+tests/
+
+bootstrap/
+
+node_modules/
+
+composer\.lock
+
+gulpfile\.js
+
+phpunit\.xml
+
+package\.json
